--- a/main.html
+++ b/main.html
@@ -1,66 +1,25 @@
 <!DOCTYPE HTML>
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" charset="utf-8">
-  var cword
-  cword = safari.extension.settings.cword
-  function cwordChanged() {
-      if (event.key == "cword") {
-          cword = event.newValue;
-      }
+  var words = {
+    alert:safari.extension.settings.alert,
+    highlight:safari.extension.settings.highlight,
+    author:safari.extension.settings.author
   }
-  safari.extension.settings.addEventListener("change", cwordChanged, false);
+  function wordsChanged() {
+    words[event.key] = event.newValue;
+  }
+  safari.extension.settings.addEventListener("change", wordsChanged, false);
   
-  function returnCWord(event) {
-      event.target.page.dispatchMessage("theCAnswer", safari.extension.settings.cword);
-  }
- 
-  function respondToGetCWord(theMessageEvent) {
-      if(theMessageEvent.name === "getCWord") {
-          var startVal=theMessageEvent.message;
-          returnCWord(theMessageEvent);
-      }
-  }
-  safari.application.addEventListener("message",respondToGetCWord,false);
-  
-  var hword
-  hword = safari.extension.settings.hword
-  function hwordChanged() {
-      if (event.key == "hword") {
-          hword = event.newValue;
-      }
-  }
-  safari.extension.settings.addEventListener("change", hwordChanged, false);
-  
-  function returnHWord(event) {
-      event.target.page.dispatchMessage("theHAnswer", safari.extension.settings.hword);
-  }
- 
-  function respondToGetHWord(theMessageEvent) {
-      if(theMessageEvent.name === "getHWord") {
-          var startVal=theMessageEvent.message;
-          returnHWord(theMessageEvent);
-      }
-  }
-  safari.application.addEventListener("message",respondToGetHWord,false);
-  
-  var word
-  word = safari.extension.settings.word
-  function wordChanged() {
-      if (event.key == "word") {
-          word = event.newValue;
-      }
-  }
-  safari.extension.settings.addEventListener("change", wordChanged, false);
-  
-  function returnWord(event) {
-      event.target.page.dispatchMessage("theAnswer", safari.extension.settings.word);
+  function returnWord(event, val) {
+      event.target.page.dispatchMessage("theWords", words[val]);
   }
  
   function respondToGetWord(theMessageEvent) {
       if(theMessageEvent.name === "getWord") {
           var startVal=theMessageEvent.message;
-          returnWord(theMessageEvent);
+          returnCWord(theMessageEvent);
       }
   }
-  safari.application.addEventListener("message",respondToGetWord,false);
+  safari.application.addEventListener("message",respondToGetCWord,false);
 </script>
